# defense-open

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/defense-core/: Cargo.toml
crates/defense-core/src/: lib.rs
crates/defense-core/src/analyzers/: autorun.rs  bluetooth.rs  browser.rs  executable.rs  lnk.rs  miner.rs  mod.rs  network.rs  persistence.rs  script.rs  wireless.rs
crates/defense-core/src/collectors/: bluetooth.rs  filesystem.rs  linux_persistence.rs  macos_persistence.rs  mod.rs  network.rs  persistence.rs  process.rs  windows_persistence.rs  wireless.rs
crates/defense-core/src/p2p/: mod.rs
crates/defense-core/src/platform/: trust.rs
crates/defense-core/src/quarantine/: manager.rs  metadata.rs  mod.rs
crates/defense-core/src/report/: features.rs  html.rs  json.rs  mod.rs  redaction.rs
crates/defense-core/src/rules/: engine.rs  mod.rs  schema.rs
crates/defense-core/src/scan/: file_analysis.rs  mod.rs  planner.rs  runner.rs  scoring.rs  target.rs
crates/defense-core/tests/: quick_scan.rs
crates/defense-daemon/: Cargo.toml
crates/defense-daemon/src/: event_log.rs  fs_watcher.rs  ipc.rs  ipc_types.rs  lib.rs  main.rs  service.rs
crates/defense-ml/src/: lib.rs
ml_pipeline/: defense_rf.onnx
rules/builtin/: miner.defense.json
scripts/: ai_safety_contract_audit.sh  ai_safety_contract_audit_fixture_test.sh  ci_artifact_evidence_audit.sh  ci_artifact_evidence_audit_fixture_test.sh  evidence_next_steps.sh  evidence_next_steps_fixture_test.sh  feature_export_smoke.sh  full_budget_smoke.sh  github_ci_evidence_fetch.sh  github_ci_evidence_fetch_fixture_test.sh  github_release_evidence_fetch.sh  github_release_evidence_fetch_fixture_test.sh  miner_process_smoke.sh  mvp_acceptance_gate.sh  mvp_acceptance_gate_fixture_test.sh  no_background_process_smoke.sh  no_upload_static_audit.sh  package_release.sh  perf_quick_memory_smoke.sh  perf_usb_10k_smoke.sh  physical_usb_acceptance.sh  platform_evidence_smoke.sh  portability_contract_audit.sh  portability_contract_audit_fixture_test.sh  progress_latency_smoke.sh  quarantine_confirmation_smoke.sh  quarantine_roundtrip_smoke.sh  release_artifact_smoke.sh  release_evidence_audit.sh  release_evidence_audit_fixture_test.sh  report_redaction_smoke.sh  repository_readiness_audit.sh  repository_readiness_fixture_test.sh  run_evidence_step.sh  sign_release_artifact.sh  system_critical_policy_smoke.sh  usb_detection_smoke.sh  validate_feature_schema.sh  validate_html_offline.sh  validate_report_schema.sh  (+3 more)
scripts/lib/: panicscan_binary.sh
