[package]
name = "defense-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
goblin.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
defense-ml = { path = "../defense-ml" }
netstat2 = "0.11.2"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
wifiscanner = "0.5.1"
btleplug = "0.11.5"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "tcp", "macros"] }
[target.'cfg(windows)'.dependencies]
winreg.workspace = true
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true

